Symfonize framework index (planning/postes_cfg/index.php)
Symfonize working hours (edit and save)
Symfonize statistics index
Symfonize My Account page
Symfonize framework's seperation lines
Symfonize framework groups
Symfonize agents index page
Symfonize framework table edit/add
Add a param to define the switching time between half-day and full-day
Absences for remote working ability


-Fixes
Remove HTML entities in closing days
Working hours fixes
Add validate icon
Use PHP default timezone.
Keep absence's other reason when there is recurrence
Fix display of agents on vacation on the week schedules
Prevent warnings in script tools/remove_html_entities_from_absences_reasons.php
Prevent the redirection to the 'access denied' page on cli and symfony mode
Replace heredoc string by double quotes string at end of weekly
planning
check if agents are blocked when right copying planning's cell
show only managed agents in list and in add form
Fix/Statistics : Initialize information about agents
Fix reset URL for holiday index and rename related button
Write ICS URL from base URL
Fix a wrong links on absence and holiday notifications

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API
Add a cron script to purge the log table: planningBibio:PurgeLogTable
Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment
Symfonisation of admin -> activites
Use Doctrine ORM for skill pages
Use fine tuning of hours in holidays forms
Mass modification of agents
Symfonize agenda/index page
Stick planning times row and job columns
Symfonize and Doctrinize postes/index.php

-Fixes
Use fine tuning of hours in absence forms
Fix the control of plannings when an absence is recorded
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence