@@ -39,6 +39,10 @@
     - 22
 "framework.save_line":
     - 22
+"notification.index":
+    - 21
+"notification.save":
+    - 21
 "statistics.index":
     - 17
 "workinghour.index":
