@@ -1,0 +1,3 @@
+<?php
+
+$sql[]="DELETE FROM `{$dbprefix}acces` WHERE `page`='/notification';";
