@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block page %}
-  <form name='form2' action="{{ asset('notification') }}" method='get'>
+  <form name='form2' action="{{ asset('notification') }}" method='post'>
     <table style='margin-bottom:10px;'>
       <tr style='vertical-align:center;'>
         <td style='width:370px;'>
