@@ -18,6 +18,7 @@ Symfonize agents index page
 Symfonize framework table edit/add
 Add a param to define the switching time between half-day and full-day
 Absences for remote working ability
+Symfonize notifications save
 
 
 -Fixes
